# stwo-ml

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GPU_COMPLETION_PLAN.md  README.md  RECURSIVE_STARK_PIPELINE.md  stwo  stwo-cairo  test.mjs
crates/air-utils/: Cargo.toml
crates/constraint-framework/: Cargo.toml
crates/constraint-framework/src/: component.rs  info.rs  lib.rs  logup.rs  point.rs  preprocessed_columns.rs
crates/constraint-framework/src/expr/: degree.rs  evaluator.rs  mod.rs  utils.rs
crates/constraint_framework/: Cargo.toml
crates/constraint_framework/src/: assert.rs  component.rs  cpu_domain.rs  info.rs  lib.rs  logup.rs  point.rs  preprocessed_columns.rs  relation_tracker.rs  simd_domain.rs
crates/stwo/: Cargo.toml
crates/stwo-ml/: Cargo.toml  README.md
crates/stwo-ml/benches/: activation.rs  attention.rs  matmul.rs
crates/stwo-ml/src/: aggregation.rs  backend.rs  commitment.rs  gpu.rs  lib.rs  recursive.rs  starknet.rs
crates/stwo-ml/tests/: gpu_pipeline.rs  pipeline_e2e.rs
crates/stwo-types/: Cargo.toml
crates/stwo-types/src/: lib.rs  utils.rs
crates/stwo/benches/: eval_at_point_by_folding.rs  fri_quotients.rs  pcs.rs
crates/stwo/src/: lib.rs
crates/stwo/src/core/: fri.rs  (+7 more)
crates/stwo/tests/: gpu_integration_tests.rs  gpu_unit_tests.rs
engine/sdk/python/: pyproject.toml
proof-stream/: Cargo.toml
proof-stream/src/: blueprint.rs  events.rs  lib.rs  rerun_sink.rs  sink.rs  ws_sink.rs
proof-stream/src/viz/: attention.rs  circuit.rs  gpu.rs  inference.rs  mod.rs  sumcheck.rs
proof-stream/tests/: test_events.rs  test_sink.rs
stwo-cairo/cairo-prove/: Cargo.toml
stwo-cairo/cairo-prove/src/: error.rs  execute.rs  lib.rs  main.rs  prove.rs
stwo-ml/: Cargo.toml  Makefile  README.md  docker-compose.gpu.yml  install.sh  obelyzk-paper.tex  package-lock.json  package.json
stwo-ml/benches/: attention.rs  decode.rs  e2e_models.rs
stwo-ml/docs/: AUDIT_SCOPE.md  CLASSIFIER.md  DEPLOYER_ACCOUNTS.md  ENV_VARS.md  GPU_STARK_ROADMAP.md  ON_CHAIN_VERIFICATION.md  OPTIMIZATION_ROADMAP_SPEC.md  RECURSIVE_STARK.md  ROADMAP.md  ROADMAP_V3.md  SOUNDNESS_GATES_AUDIT.md  STATUS.md  STATUS_REPORT.md  changelog-v0.2.md  fast-gkr-onchain-v2.md  fast-gkr-onchain-v4-aggregated-openings.md  gkr-protocol.md  gpu-acceleration.md  input-claim-verification.md  security-audit.md  simd-block-batching.md  transformer-architecture.md  vm31-privacy-protocol.md
stwo-ml/docs/Audit Report/: 03_semantic_evaluation.md  04_audit_report_format.md  05_onchain_audit_contract.md  07_access_control.md
stwo-ml/examples/: rerun_demo.rs
stwo-ml/scripts/: benchmark_decode.sh  benchmark_gpu.sh  chat_engine.py  declare_trustless.mjs  deploy_firewall.mjs  deploy_node.sh  ec2_stream.sh  gpu-pipeline.sh  h200_direct_pipeline.sh  live_demo.sh  prove_and_submit.sh  prove_onchain.sh  publish_all.sh  submit_full.mjs  submit_recursive.mjs  test_verification_hardening.sh  trace_tx.py
stwo-ml/scripts/pipeline/: GETTING_STARTED.md  extract_streaming_calldata.mjs  paymaster_submit.mjs  register_and_submit.mjs  run_e2e.sh  streaming_submit.mjs  submit_step.mjs
stwo-ml/sdk/python/: README.md  pyproject.toml
stwo-ml/src/: aggregation.rs  backend.rs  binary_serde.rs  cairo_serde.rs  economics.rs  gpu.rs  gpu_scheduler.rs  gpu_sumcheck.rs  json_serde.rs  kv_state.rs  lib.rs  multi_gpu.rs  policy.rs  receipt.rs  starknet.rs  tee.rs  weight_cache.rs  worker.rs
stwo-ml/src/audit/: aggregator.rs  capture.rs  deterministic.rs  digest.rs  encryption.rs  log.rs  mod.rs  orchestrator.rs  prover.rs  replay.rs  report.rs  scoring.rs  self_eval.rs  storage.rs  submit.rs  types.rs
stwo-ml/src/circuits/: batch.rs  deposit.rs  helpers.rs  mod.rs  poseidon_circuit.rs  spend.rs  stark_deposit.rs  stark_spend.rs  stark_withdraw.rs  withdraw.rs
stwo-ml/src/classifier/: encoder.rs  mod.rs  model.rs  prove.rs  weight_registry.rs
stwo-ml/src/compiler/: checkpoint.rs  chunked.rs  dual.rs  graph.rs  hf_loader.rs  inspect.rs  mod.rs  onnx.rs  prove.rs  quantize_weights.rs  safetensors.rs  streaming.rs
stwo-ml/src/components/: activation.rs  adversarial_tests.rs  attention.rs  conv2d.rs  dequantize.rs  elementwise.rs  embedding.rs  f32_ops.rs  integer_math.rs  layernorm.rs  matmul.rs  mod.rs  poseidon2_air.rs  quantize.rs  range_check.rs  rmsnorm.rs  rope.rs  tiled_matmul.rs
stwo-ml/src/crypto/: aggregated_opening.rs  commitment.rs  encryption.rs  merkle_cache.rs  merkle_m31.rs  mle_opening.rs  mod.rs  poseidon2_m31.rs  poseidon_channel.rs  poseidon_merkle.rs
stwo-ml/src/gadgets/: lookup_table.rs  mod.rs  quantize.rs  range_check.rs
stwo-ml/src/gkr/: circuit.rs  mod.rs  profiler.rs  prover.rs  types.rs  verifier.rs
stwo-ml/src/metal/: dispatch.rs  matmul.rs  mod.rs
stwo-ml/src/privacy/: mod.rs  note_store.rs  pool_client.rs  relayer.rs  serde_utils.rs  tree_sync.rs  tx_builder.rs  wallet.rs
stwo-ml/src/providers/: local.rs  mod.rs  types.rs
stwo-ml/src/recursive/: air.rs  mod.rs  prover.rs  tests.rs  types.rs  verifier.rs  witness.rs
stwo-ml/src/tui/: dashboard.rs  mod.rs
stwo-ml/src/vm/: executor.rs  prover.rs  queue.rs  trace.rs
stwo-ml/tests/: cli_audit.rs  cross_verify.rs  decode_benchmark.rs  e2e_audit.rs  e2e_cairo_verify.rs  e2e_firewall.rs  e2e_full_pipeline.rs  e2e_sdk_test.mjs  gpu_pipeline.rs  proof_stream_integration.rs  scale_matmul.rs  transcript_vectors.rs
stwo-ml/tests/artifacts/: d10_onchain_summary.json  d10_verify_gkr_calldata.txt  d11_onchain_summary.json  d11_register_gkr_calldata.txt  d7_onchain_summary.json  d7_verify_gkr_calldata.txt  d9_onchain_summary.json  d9_verify_gkr_calldata.txt  sp3_matmul_only_proof.json  sp3_mlp_proof.json  sp3_mlp_proof_tampered.json
stwo-ml/training/: adversarial.py  generate_dataset.py  model.py  requirements.txt  train.py  upload_hf.py
stwo-ml/training/ciro/: api_contract.py  client.py
stwo-ml/training/output/: feat_max.npy  model.pt  trained_weights.rs  training_metadata.json  weights_m31.json
stwo/crates/air-utils/: Cargo.toml
stwo/crates/constraint-framework/: Cargo.toml
stwo/ensure-verifier-no_std/: Cargo.toml
(+748 files in other folders)
