[workspace]
members = [
    "crates/stwo",
    "crates/air-utils",
    "crates/air-utils-derive",
    "crates/constraint-framework",
    "crates/examples",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
blake2 = "0.10.6"
blake3 = "1.5.0"
educe = "0.5.0"
hex = "0.4.3"
itertools = "0.12.0"
num-traits = "0.2.17"
thiserror = "1.0.56"
bytemuck = "1.14.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rayon = { version = "1.10.0", optional = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
hashbrown = ">=0.15.2"

[profile.bench]
codegen-units = 1
lto = true
