[package]
name = "proof-stream"
version = "0.1.0"
edition = "2021"
description = "Real-time 3D streaming visualization of ZK proof sessions via Rerun"
license = "Apache-2.0"

[features]
default = []
rerun = ["dep:rerun"]
ws-server = ["dep:tokio", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
crossbeam = "0.8"
rerun = { version = "0.29", optional = true, default-features = false, features = ["sdk"] }
tokio = { version = "1", features = ["sync"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
