[package]
name = "stwo-ml"
version = "0.2.0"
edition = "2021"
description = "ML inference proving circuits built on STWO Circle STARKs"
license = "Apache-2.0"
repository = "https://github.com/Bitsage-Network/stwo-ml"

[features]
default = ["std"]
std = ["stwo/std"]
gpu = ["stwo/gpu"]
cuda-runtime = ["gpu", "stwo/cuda-runtime"]
multi-gpu = ["cuda-runtime"]
tee = ["cuda-runtime"]
onnx = ["dep:tract-onnx"]
safetensors = ["dep:safetensors", "dep:memmap2"]
model-loading = ["onnx", "safetensors"]
cli = ["model-loading", "dep:clap", "dep:serde_json", "serde"]

[dependencies]
stwo = { path = "../stwo/crates/stwo", features = ["prover"] }
stwo-constraint-framework = { path = "../stwo/crates/constraint-framework", features = ["prover"] }
tracing = "0.1"
thiserror = "2"
itertools = "0.12"
num-traits = "0.2"
rayon = "1.10"
serde = { version = "1", features = ["derive"], optional = true }
starknet-crypto = { version = "0.6.2", default-features = false, features = ["alloc"] }
starknet-ff = { version = "0.3.7", default-features = false, features = ["alloc"] }
tract-onnx = { version = "0.21", optional = true, default-features = false }
safetensors = { version = "0.4", optional = true }
memmap2 = { version = "0.9", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
serde_json = "1"

[[bin]]
name = "prove-model"
path = "src/bin/prove_model.rs"
required-features = ["cli"]

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "attention"
harness = false

[[bench]]
name = "e2e_models"
harness = false
