[package]
name = "stwo-ml"
version = "0.2.0"
edition = "2021"
description = "ML inference proving circuits built on STWO Circle STARKs"
license = "Apache-2.0"
repository = "https://github.com/Bitsage-Network/stwo-ml"

[features]
default = ["std"]
std = ["stwo/std"]
gpu = ["stwo/gpu", "stwo-constraint-framework/gpu"]
cuda-runtime = ["gpu", "stwo/cuda-runtime", "stwo-constraint-framework/cuda-runtime", "dep:cudarc"]
multi-gpu = ["cuda-runtime"]
tee = ["cuda-runtime"]
onnx = ["dep:tract-onnx"]
safetensors = ["dep:safetensors"]
model-loading = ["onnx", "safetensors"]
audit = ["serde", "dep:serde_json", "dep:crossbeam", "dep:getrandom"]
audit-http = ["audit", "dep:ureq", "dep:sha3"]
aes-fallback = ["audit", "dep:aes-gcm"]
cli = ["model-loading", "dep:clap", "dep:serde_json", "serde", "dep:getrandom"]
server = ["model-loading", "dep:axum", "dep:tower-http", "dep:uuid", "dep:tokio", "dep:serde_json", "serde", "dep:getrandom"]
server-audit = ["server", "audit"]
proof-stream = ["dep:proof-stream"]
proof-stream-rerun = ["proof-stream", "proof-stream/rerun"]
proof-stream-ws = ["proof-stream", "proof-stream/ws-server"]
server-stream   = ["server", "proof-stream-ws", "dep:ureq"]

[dependencies]
stwo = { path = "../stwo/crates/stwo", features = ["prover"] }
stwo-constraint-framework = { path = "../stwo/crates/constraint-framework", features = ["prover"] }
tracing = "0.1"
thiserror = "2"
itertools = "0.12"
num-traits = "0.2"
rayon = "1.10"
serde = { version = "1", features = ["derive"], optional = true }
starknet-crypto = { version = "0.6.2", default-features = false, features = ["alloc"] }
starknet-ff = { version = "0.3.7", default-features = false, features = ["alloc"] }
tract-onnx = { version = "0.21", optional = true, default-features = false }
safetensors = { version = "0.4", optional = true }
memmap2 = "0.9"
clap = { version = "4", features = ["derive", "env"], optional = true }
serde_json = { version = "1", optional = true }
axum = { version = "0.7", features = ["macros", "ws"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
crossbeam = { version = "0.8", optional = true }
aes-gcm = { version = "0.10", optional = true }
sha2 = "0.10"
ureq = { version = "3", optional = true }
sha3 = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
proof-stream = { path = "../proof-stream", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
cudarc = { version = "0.11", features = ["driver", "nvrtc", "cuda-12050"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cudarc = { version = "0.11", features = ["driver", "nvrtc", "cuda-12050"], optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
serde_json = "1"

[[bin]]
name = "prove-model"
path = "src/bin/prove_model.rs"
required-features = ["cli"]

[[bin]]
name = "prove-server"
path = "src/bin/prove_server.rs"
required-features = ["server"]

[[example]]
name = "rerun_demo"
required-features = ["proof-stream-rerun"]

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "attention"
harness = false

[[bench]]
name = "e2e_models"
harness = false
