[package]
name = "stwo-air-utils"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck.workspace = true
itertools.workspace = true
rayon = { version = "1.10.0", optional = false }
stwo = { path = "../stwo", version = "2.0.0", features = ["prover"] }
stwo-air-utils-derive = { path = "../air-utils-derive", version = "2.0.0" }

[lib]
bench = false
