[package]
name = "stwo-constraint-framework"
version.workspace = true
edition.workspace = true

[features]
parallel = ["dep:rayon", "stwo/parallel"]
prover = ["stwo/prover"]

[dependencies]
rayon = { workspace = true, optional = true }
num-traits.workspace = true
itertools.workspace = true
tracing.workspace = true
stwo = { path = "../stwo" }
rand.workspace = true
