[package]
name = "stwo-constraint-framework"
version = "2.0.0"
edition.workspace = true

[features]
default = ["std"]
std = ["stwo/std", "itertools/use_std", "tracing/std", "num-traits/std", "std-shims/std"]
parallel = ["dep:rayon", "stwo/parallel"]
prover = ["stwo/prover", "std"]

[dependencies]
rayon = { workspace = true, optional = true }
num-traits.workspace = true
itertools.workspace = true
tracing.workspace = true
stwo = { path = "../stwo", version = "2.0.0", default-features = false }
rand.workspace = true
hashbrown.workspace = true
std-shims.workspace = true
