[package]
name = "stwo-constraint-framework"
version.workspace = true
edition.workspace = true

[features]
parallel = ["dep:rayon"]

[dependencies]
rayon = { workspace = true, optional = true }
num-traits.workspace = true
itertools.workspace = true
tracing.workspace = true
stwo-prover = { path = "../prover" }
rand.workspace = true
