[package]
name = "stwo-constraint-framework"
version.workspace = true
edition.workspace = true

[features]
parallel = ["dep:rayon"]

[dependencies]
rayon = { workspace = true, optional = true }
num-traits.workspace = true
itertools.workspace = true
tracing.workspace = true
# TODO(Ohad): prover feature for the constraint framework.
stwo-prover = { path = "../prover", features = ["prover"] }
rand.workspace = true
