[package]
name = "stwo-constraint-framework"
version.workspace = true
edition.workspace = true

[features]
parallel = ["dep:rayon", "stwo-prover/parallel"]
prover = ["stwo-prover/prover"]

[dependencies]
rayon = { workspace = true, optional = true }
num-traits.workspace = true
itertools.workspace = true
tracing.workspace = true
stwo-prover = { path = "../prover" }
rand.workspace = true
