[package]
name = "stwo-ml"
version = "0.2.0"
edition = "2021"
description = "ML inference proving circuits built on STWO Circle STARKs"
license = "Apache-2.0"
repository = "https://github.com/Bitsage-Network/stwo-ml"

[features]
default = ["std"]
std = ["stwo/std"]
gpu = ["stwo/gpu", "stwo-constraint-framework/gpu"]
cuda-runtime = ["gpu", "stwo/cuda-runtime", "stwo-constraint-framework/cuda-runtime"]
multi-gpu = ["cuda-runtime"]
tee = ["cuda-runtime"]
onnx = ["dep:tract-onnx"]
safetensors = ["dep:safetensors", "dep:memmap2"]
model-loading = ["onnx", "safetensors"]

[dependencies]
stwo = { path = "../stwo", features = ["prover"] }
stwo-constraint-framework = { path = "../constraint-framework", features = ["prover", "parallel"] }
tracing = "0.1"
thiserror = "2"
itertools = "0.12"
num-traits = "0.2"
rayon = "1.10"
serde = { version = "1", features = ["derive"], optional = true }
starknet-crypto = { version = "0.6.2", default-features = false, features = ["alloc"] }
starknet-ff = { version = "0.3.7", default-features = false, features = ["alloc"] }
tract-onnx = { version = "0.21", optional = true, default-features = false }
safetensors = { version = "0.4", optional = true }
memmap2 = { version = "0.9", optional = true }

hex = "0.4"
serde_json = "1"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bin]]
name = "prove-qwen"
path = "src/bin/prove_qwen.rs"
required-features = ["safetensors"]

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "attention"
harness = false
