[package]
name = "stwo"
version.workspace = true
edition.workspace = true

[features]
prover = []
parallel = ["rayon"]
slow-tests = []
tracing = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2.workspace = true
blake3.workspace = true
bytemuck = { workspace = true, features = ["derive", "extern_crate_alloc"] }
cfg-if = "1.0.0"
educe.workspace = true
hex.workspace = true
indexmap = "2.7.1"
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true
starknet-crypto = "0.6.2"
starknet-ff = "0.3.7"
thiserror.workspace = true
tracing.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
aligned = "0.4.2"
test-log = { version = "0.2.15", features = ["trace"] }
[target.'cfg(all(target_family = "wasm", not(target_os = "wasi")))'.dev-dependencies]
wasm-bindgen-test = "0.3.43"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.criterion]
features = ["html_reports"]
version = "0.5.1"

# Default features cause compile error:
# "Rayon cannot be used when targeting wasi32. Try disabling default features."
[target.'cfg(target_arch = "wasm32")'.dev-dependencies.criterion]
default-features = false
features = ["html_reports"]
version = "0.5.1"

[lib]
bench = false
crate-type = ["cdylib", "lib"]

[lints.rust]
warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"

[lints.clippy]
missing_const_for_fn = "warn"

[[bench]]
harness = false
name = "bit_rev"

[[bench]]
harness = false
name = "eval_at_point"
required-features = ["prover"]

[[bench]]
harness = false
name = "fft"
required-features = ["prover"]

[[bench]]
harness = false
name = "field"
required-features = ["prover"]

[[bench]]
harness = false
name = "fri"
required-features = ["prover"]

[[bench]]
harness = false
name = "lookups"
required-features = ["prover"]

[[bench]]
harness = false
name = "merkle"
required-features = ["prover"]

[[bench]]
harness = false
name = "prefix_sum"
required-features = ["prover"]

[[bench]]
harness = false
name = "quotients"
required-features = ["prover"]

[[bench]]
harness = false
name = "pcs"
required-features = ["prover"]
