[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obelyzk"
version = "0.4.0"
description = "Python SDK for ObelyZK — Provable ML Inference"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Bitsage Network"},
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpserver>=1.0",
]

[project.urls]
Homepage = "https://github.com/Bitsage-Network/stwo-ml"
Documentation = "https://github.com/Bitsage-Network/stwo-ml/tree/main/sdk/python"
