[package]
name = "stwo-constraint-framework"
version = "2.0.0"
edition.workspace = true
license.workspace = true
description = "Constraint framework for building AIR constraints with STWO"

[features]
default = ["std"]
std = ["stwo/std", "itertools/use_std", "tracing/std", "num-traits/std", "stwo-std-shims/std"]
parallel = ["dep:rayon", "stwo/parallel"]
prover = ["stwo/prover", "std"]
# GPU acceleration for constraint evaluation
gpu = ["stwo/gpu"]
cuda-runtime = ["gpu", "stwo/cuda-runtime"]

[dependencies]
rayon = { workspace = true, optional = true }
num-traits.workspace = true
itertools.workspace = true
tracing.workspace = true
stwo = { path = "../stwo", version = "2.0.0", default-features = false }
rand.workspace = true
hashbrown.workspace = true
stwo-std-shims = { version = "1.0.0", default-features = false }

[package.metadata.cargo-machete]
ignored = ["stwo-std-shims"]
